# paraseq_benchmark

./: .gitignore  Cargo.toml  README.md  justfile
notebooks/: Analysis.ipynb
results/: benchmark_100.csv  benchmark_200.csv  benchmark_30.csv  benchmark_300.csv  benchmark_50.csv
src/: main.rs  run_bio.rs  run_fastq.rs  run_fastq_batch.rs  run_needletail.rs  run_paraseq.rs  run_seq_io.rs  run_seq_io_batch.rs
